--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">CALCULATOR</div>
     <div class="container">
         <div class="calc">
-            <div class="solution">12345678</div>
+            <div class="display"></div>
             <div class="buttons">
                 <div class="numbers">
                     <button class="number">1</button>
@@ -31,8 +31,8 @@
                     <button class="operator" id="minus">-</button>
                     <button class="operator" id="multiply">*</button>
                     <button class="operator" id="divide">/</button>
-                    <button class="operator" id="equals">=</button>
-                    <button class="operator" id="clear">CLR</button>
+                    <button id="equals">=</button>
+                    <button id="clear">CLR</button>
                 </div>
                 
 
